--- a/Day3/next-core-app/package.json
+++ b/Day3/next-core-app/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.11.3",
     "next": "14.2.26",
     "react": "^18",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18"
   },
   "devDependencies": {
