--- a/Day3/next-core-app/package.json
+++ b/Day3/next-core-app/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "next": "14.2.26",
     "react": "^18",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.55.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
